--- a/frontend/home_owner.html
+++ b/frontend/home_owner.html
@@ -40,7 +40,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/owner_dashboard.js"></script>
+<script src="js/owner.js"></script>
 </body>
 </html>
     <div class="card p-3 shadow">
