--- a/frontend/home_owner.html
+++ b/frontend/home_owner.html
@@ -22,6 +22,8 @@
       <tr>
         <th>Name</th>
         <th>Location</th>
+        <th>Description</th>
+        <th>Photo</th>
         <th>Total Slots</th>
         <th>Reserved Slots</th>
       </tr>
