--- a/frontend/home_owner.html
+++ b/frontend/home_owner.html
@@ -1,56 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Owner Dashboard</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Owner Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Stadium Owner</a>
-    <button class="btn btn-light" id="logoutBtn">Logout</button>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Stadium Owner</a>
+      <button class="btn btn-light" id="logoutBtn">Logout</button>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
+    <h2>My Stadiums</h2>
+    <table class="table table-striped" id="stadiumTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Location</th>
+          <th>Description</th>
+          <th>Photo</th>
+          <th>Total Slots</th>
+          <th>Reserved Slots</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <h2 class="mt-5">Add New Stadium</h2>
+    <form id="addStadiumForm" class="card p-3 shadow-sm mb-4">
+      <input type="text" class="form-control mb-2" name="name" placeholder="Stadium Name" required />
+      <input type="text" class="form-control mb-2" name="location" placeholder="Location" required />
+      <textarea class="form-control mb-2" name="description" placeholder="Description"></textarea>
+      <input type="text" class="form-control mb-2" name="photo" placeholder="Photo URL" />
+      <button type="submit" class="btn btn-success">Add Stadium</button>
+    </form>
+
+    <h2 class="mt-5">Add Slot to Stadium</h2>
+    <form id="addSlotForm" class="card p-3 shadow-sm mb-4">
+      <div class="mb-3">
+        <label for="stadiumSelect" class="form-label">Select Stadium</label>
+        <select class="form-select" name="stadium_id" id="stadiumSelect" required>
+          <option value="">Select Stadium</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="date" class="form-label">Date</label>
+        <input type="date" class="form-control" name="date" id="date" required />
+      </div>
+      <div class="mb-3">
+        <label for="time_slot" class="form-label">Time Slot</label>
+        <input type="time" class="form-control" name="time_slot" id="time_slot" required />
+      </div>
+      <button type="submit" class="btn btn-primary">Add Slot</button>
+    </form>
+
+    <div class="card p-3 shadow-sm">
+      <h4>Statistics</h4>
+      <p>Total Stadiums: <span id="totalStadiums">0</span></p>
+      <p>Total Reservations: <span id="totalReservations">0</span></p>
+    </div>
   </div>
-</nav>
 
-<div class="container mt-4">
-  <h2>My Stadiums</h2>
-  <table class="table table-striped" id="stadiumTable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Location</th>
-        <th>Description</th>
-        <th>Photo</th>
-        <th>Total Slots</th>
-        <th>Reserved Slots</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <h2 class="mt-5">Add New Stadium</h2>
-  <form id="addStadiumForm">
-    <input type="text" class="form-control mb-2" name="name" placeholder="Stadium Name" required>
-    <input type="text" class="form-control mb-2" name="location" placeholder="Location" required>
-    <textarea class="form-control mb-2" name="description" placeholder="Description"></textarea>
-    <input type="text" class="form-control mb-2" name="photo" placeholder="Photo URL">
-    <button type="submit" class="btn btn-success">Add Stadium</button>
-  </form>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/owner.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/owner.js"></script>
 </body>
 </html>
-    <div class="card p-3 shadow">
-                <h4>Statistics</h4>
-                <p>Total Stadiums: <span id="totalStadiums">0</span></p>
-                <p>Total Reservations: <span id="totalReservations">0</span></p>
-            </div>
-        </div>
-
-    </div>
-</div>  
