--- a/frontend/home_user.html
+++ b/frontend/home_user.html
@@ -54,5 +54,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/user_home.js"></script>
+  <script>
+
+</script>
+
 </body>
 </html>
