--- a/frontend/home_user.html
+++ b/frontend/home_user.html
@@ -8,12 +8,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Stadium User</a>
-    <button class="btn btn-light" id="logoutBtn">Logout</button>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Stadium User</a>
+      <div>
+        <a href="messages.html" class="btn btn-outline-light me-2">
+          📧 Messages
+        </a>
+        <button class="btn btn-light" id="logoutBtn">Logout</button>
+      </div>
+    </div>
+  </nav>
 
   <div class="container mt-4">
     <h2>Search Stadiums</h2>
@@ -23,23 +28,37 @@
       <button type="submit" class="btn btn-primary">Search</button>
     </form>
 
-  <h2>Available Stadiums</h2>
-  <table class="table table-striped" id="stadiumTable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Location</th>
-        <th>Date</th>
-        <th>Time Slot</th>
-        <th>Status</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
+    <h2>Available Stadiums</h2>
+    <table class="table table-striped" id="stadiumTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Location</th>
+          <th>Date</th>
+          <th>Time Slot</th>
+          <th>Status</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/user_home.js"></script>
+    <h2 class="mt-5">My Reservations</h2>
+    <table class="table table-bordered" id="reservationTable">
+      <thead class="table-secondary">
+        <tr>
+          <th>Stadium</th>
+          <th>Date</th>
+          <th>Time Slot</th>
+          <th>Status</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/user_home.js"></script>
 </body>
 </html>
