Update stadium table headers and statistics section

--- a/frontend/home_owner.html
+++ b/frontend/home_owner.html
@@ -25,12 +25,13 @@
     <table class="table table-striped" id="stadiumTable">
       <thead>
         <tr>
+          <th>Photo</th>
           <th>Name</th>
           <th>Location</th>
           <th>Description</th>
-          <th>Photo</th>
           <th>Total Slots</th>
-          <th>Reserved Slots</th>
+          <th>Reserved</th>
+          <th>Available</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -68,6 +69,7 @@
       <h4>Statistics</h4>
       <p>Total Stadiums: <span id="totalStadiums">0</span></p>
       <p>Total Reservations: <span id="totalReservations">0</span></p>
+      <p>Total Slots: <span id="totalSlots">0</span></p>
     </div>
   </div>
 
